fix broken css

--- a/src/AppBundle/Resources/assets/less/common.less
+++ b/src/AppBundle/Resources/assets/less/common.less
@@ -8,6 +8,10 @@
   }
 
   & > .body {
+    flex: 1 1 auto;
+  }
+
+  & > .sidebar {
     flex: 1 0 auto;
   }
 
